--- a/fanf-cloud-dependencies/pom.xml
+++ b/fanf-cloud-dependencies/pom.xml
@@ -27,6 +27,7 @@
         <commons-lang3.version>3.6</commons-lang3.version>
         <mysql-connector-java.version>5.1.45</mysql-connector-java.version>
         <servlet-api.version>3.1.0</servlet-api.version>
+        <ehcache.version>3.6.1</ehcache.version>
     </properties>
 
     <dependencyManagement>
@@ -137,9 +138,9 @@
                 <version>2.4.2</version>
             </dependency>
             <dependency>
-                <groupId>org.apache.commons</groupId>
+                <groupId>commons-codec</groupId>
                 <artifactId>commons-codec</artifactId>
-                <version>2.4.2</version>
+                <version>1.11</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.commons</groupId>
