--- a/fanf-cloud-services/fanf-cloud-district/pom.xml
+++ b/fanf-cloud-services/fanf-cloud-district/pom.xml
@@ -3,19 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>fanf-cloud</artifactId>
+        <artifactId>fanf-cloud-services</artifactId>
         <groupId>com.fanf.cloud</groupId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>fanf-cloud-services</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>fanf-cloud-attachment</module>
-        <module>fanf-cloud-dict</module>
-        <module>fanf-cloud-guard</module>
-        <module>fanf-cloud-audit</module>
-        <module>fanf-cloud-vcc</module>
-        <module>fanf-cloud-district</module>
-    </modules>
+
+    <artifactId>fanf-cloud-district</artifactId>
+    <!--参考https://github.com/conanchen/gedit-cloud-district-->
+
 </project>
